# Minecraft

./: CMakeLists.txt  README.md
Minecraft/: .gitignore  CMakeLists.txt
Minecraft/src/: PacketCoder.cpp  ReceivingConnectionEndpoint.cpp  SendingConnectionEndpoint.cpp
Minecraft/src/Client/: Client.cpp
Minecraft/src/Minecraft/: Boolean.cpp  PacketData.cpp  String.cpp  UShort.cpp  VarInt.cpp
Tests/: CMakeLists.txt
Tests/src/booleans/: boolean_false.cpp  boolean_false_decode.cpp  boolean_false_encode.cpp  boolean_true.cpp  boolean_true_decode.cpp  boolean_true_encode.cpp
Tests/src/conditionals/: conditional_not_present_decode.cpp  conditional_not_present_encode.cpp  conditional_present_decode.cpp  conditional_present_encode.cpp
Tests/src/positions/: position_-1239_-817_-9917_decode.cpp  position_-1239_-817_-9917_encode.cpp  position_-1_-1_-1_decode.cpp  position_-1_-1_-1_encode.cpp  position_0_0_0_decode.cpp  position_0_0_0_encode.cpp  position_18357644_831_20882616_decode.cpp  position_18357644_831_20882616_encode.cpp
Tests/src/strings/: string_alphabet.cpp  string_alphabet_decode.cpp  string_alphabet_encode.cpp  string_empty.cpp  string_empty_decode.cpp  string_empty_encode.cpp  string_symbols.cpp  string_symbols_decode.cpp  string_symbols_encode.cpp
Tests/src/ushorts/: ushort_0.cpp  ushort_0_decode.cpp  ushort_0_encode.cpp  ushort_1.cpp  ushort_1_decode.cpp  ushort_1_encode.cpp  ushort_255.cpp  ushort_255_decode.cpp  ushort_255_encode.cpp  ushort_256.cpp  ushort_256_decode.cpp  ushort_256_encode.cpp  ushort_65535.cpp  ushort_65535_decode.cpp  (+1 more)
(+269 files in other folders)
